--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "highlight-within-textarea": "^2.0.5",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-highlight-within-textarea": "^3.2.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
